src/y.output
   0  $accept : programa $end

   1  programa : sentencia
   2           | error

   3  bloqueSentencias : BEGIN sentencia END
   4                   | error sentencia END
   5                   | BEGIN sentencia error
   6                   | declarativa
   7                   | ejecutable

   8  sentencia : sentencia declarativa
   9            | sentencia ejecutable
  10            | declarativa
  11            | ejecutable

  12  declarativa : listaVariables ':' tipo '.'
  13              | listaVariables ':' tipo error
  14              | listaVariables tipo '.'
  15              | listaVariables ':' error '.'
  16              | error ':' tipo '.'

  17  listaVariables : listaVariables ',' ID
  18                 | ID
  19                 | listaVariables ID

  20  tipo : UINT
  21       | FLOAT

  22  ejecutable : IF '(' condicion ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF
  23             | IF '(' condicion ')' THEN bloqueSentencias ELSE ENDIF
  24             | IF condicion ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF
  25             | IF '(' condicion THEN bloqueSentencias ELSE bloqueSentencias ENDIF
  26             | IF condicion THEN bloqueSentencias ELSE bloqueSentencias ENDIF
  27             | IF '(' condicion ')' bloqueSentencias ELSE bloqueSentencias ENDIF
  28             | error '(' condicion ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF
  29             | IF '(' error ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF
  30             | IF '(' condicion ')' THEN bloqueSentencias ENDIF
  31             | IF '(' condicion ')' THEN bloqueSentencias error
  32             | IF '(' condicion ')' bloqueSentencias ENDIF
  33             | IF '(' condicion THEN bloqueSentencias ENDIF
  34             | IF condicion ')' THEN bloqueSentencias ENDIF
  35             | IF condicion THEN bloqueSentencias ENDIF
  36             | error '(' condicion ')' THEN bloqueSentencias ENDIF
  37             | IF '(' condicion ')' THEN ENDIF
  38             | WHILE '(' condicion ')' DO bloqueSentencias
  39             | error '(' condicion ')' DO bloqueSentencias
  40             | WHILE '(' condicion ')' error bloqueSentencias
  41             | WHILE condicion ')' DO bloqueSentencias
  42             | WHILE '(' condicion DO bloqueSentencias
  43             | WHILE condicion DO bloqueSentencias
  44             | WHILE '(' ')' DO bloqueSentencias
  45             | OUT '(' cadena ')'
  46             | OUT cadena ')'
  47             | OUT '(' cadena
  48             | OUT cadena
  49             | LET asignacion
  50             | LET error
  51             | asignacion

  52  condicion : expArit1 DOBLEI expArit1
  53            | expArit1 MAYORI expArit1
  54            | expArit1 MENORI expArit1
  55            | expArit1 DISTINTO expArit1
  56            | expArit1 '>' expArit1
  57            | expArit1 '<' expArit1
  58            | expArit1

  59  asignacion : ID '=' expArit1 '.'
  60             | ID '=' expArit1
  61             | ID error expArit1 '.'

  62  expArit1 : expArit1 '+' expArit2
  63           | expArit1 '-' expArit2
  64           | expArit2

  65  expArit2 : expArit2 '*' termino
  66           | expArit2 '/' termino
  67           | UI_F '(' expArit1 ')'
  68           | UI_F '(' ')'
  69           | UI_F expArit1 ')'
  70           | termino

  71  termino : CTE
  72          | ID
  73          | '-' CTE

state 0
	$accept : . programa $end  (0)

	error  shift 1
	IF  shift 2
	OUT  shift 3
	WHILE  shift 4
	LET  shift 5
	ID  shift 6
	.  error

	programa  goto 7
	sentencia  goto 8
	declarativa  goto 9
	ejecutable  goto 10
	listaVariables  goto 11
	asignacion  goto 12


state 1
	programa : error .  (2)
	declarativa : error . ':' tipo '.'  (16)
	ejecutable : error . '(' condicion ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (28)
	ejecutable : error . '(' condicion ')' THEN bloqueSentencias ENDIF  (36)
	ejecutable : error . '(' condicion ')' DO bloqueSentencias  (39)

	':'  shift 13
	'('  shift 14
	$end  reduce 2


state 2
	ejecutable : IF . '(' condicion ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (22)
	ejecutable : IF . '(' condicion ')' THEN bloqueSentencias ELSE ENDIF  (23)
	ejecutable : IF . condicion ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (24)
	ejecutable : IF . '(' condicion THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (25)
	ejecutable : IF . condicion THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (26)
	ejecutable : IF . '(' condicion ')' bloqueSentencias ELSE bloqueSentencias ENDIF  (27)
	ejecutable : IF . '(' error ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (29)
	ejecutable : IF . '(' condicion ')' THEN bloqueSentencias ENDIF  (30)
	ejecutable : IF . '(' condicion ')' THEN bloqueSentencias error  (31)
	ejecutable : IF . '(' condicion ')' bloqueSentencias ENDIF  (32)
	ejecutable : IF . '(' condicion THEN bloqueSentencias ENDIF  (33)
	ejecutable : IF . condicion ')' THEN bloqueSentencias ENDIF  (34)
	ejecutable : IF . condicion THEN bloqueSentencias ENDIF  (35)
	ejecutable : IF . '(' condicion ')' THEN ENDIF  (37)

	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	'('  shift 18
	'-'  shift 19
	.  error

	condicion  goto 20
	expArit1  goto 21
	expArit2  goto 22
	termino  goto 23


state 3
	ejecutable : OUT . '(' cadena ')'  (45)
	ejecutable : OUT . cadena ')'  (46)
	ejecutable : OUT . '(' cadena  (47)
	ejecutable : OUT . cadena  (48)

	cadena  shift 24
	'('  shift 25
	.  error


state 4
	ejecutable : WHILE . '(' condicion ')' DO bloqueSentencias  (38)
	ejecutable : WHILE . '(' condicion ')' error bloqueSentencias  (40)
	ejecutable : WHILE . condicion ')' DO bloqueSentencias  (41)
	ejecutable : WHILE . '(' condicion DO bloqueSentencias  (42)
	ejecutable : WHILE . condicion DO bloqueSentencias  (43)
	ejecutable : WHILE . '(' ')' DO bloqueSentencias  (44)

	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	'('  shift 26
	'-'  shift 19
	.  error

	condicion  goto 27
	expArit1  goto 21
	expArit2  goto 22
	termino  goto 23


state 5
	ejecutable : LET . asignacion  (49)
	ejecutable : LET . error  (50)

	error  shift 28
	ID  shift 29
	.  error

	asignacion  goto 30


state 6
	listaVariables : ID .  (18)
	asignacion : ID . '=' expArit1 '.'  (59)
	asignacion : ID . '=' expArit1  (60)
	asignacion : ID . error expArit1 '.'  (61)

	error  shift 31
	'='  shift 32
	UINT  reduce 18
	FLOAT  reduce 18
	ID  reduce 18
	':'  reduce 18
	','  reduce 18


state 7
	$accept : programa . $end  (0)

	$end  accept


state 8
	programa : sentencia .  (1)
	sentencia : sentencia . declarativa  (8)
	sentencia : sentencia . ejecutable  (9)

	error  shift 33
	IF  shift 2
	OUT  shift 3
	WHILE  shift 4
	LET  shift 5
	ID  shift 6
	$end  reduce 1

	declarativa  goto 34
	ejecutable  goto 35
	listaVariables  goto 11
	asignacion  goto 12


state 9
	sentencia : declarativa .  (10)

	.  reduce 10


state 10
	sentencia : ejecutable .  (11)

	.  reduce 11


state 11
	declarativa : listaVariables . ':' tipo '.'  (12)
	declarativa : listaVariables . ':' tipo error  (13)
	declarativa : listaVariables . tipo '.'  (14)
	declarativa : listaVariables . ':' error '.'  (15)
	listaVariables : listaVariables . ',' ID  (17)
	listaVariables : listaVariables . ID  (19)

	UINT  shift 36
	FLOAT  shift 37
	ID  shift 38
	':'  shift 39
	','  shift 40
	.  error

	tipo  goto 41


state 12
	ejecutable : asignacion .  (51)

	.  reduce 51


state 13
	declarativa : error ':' . tipo '.'  (16)

	UINT  shift 36
	FLOAT  shift 37
	.  error

	tipo  goto 42


state 14
	ejecutable : error '(' . condicion ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (28)
	ejecutable : error '(' . condicion ')' THEN bloqueSentencias ENDIF  (36)
	ejecutable : error '(' . condicion ')' DO bloqueSentencias  (39)

	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	'-'  shift 19
	.  error

	condicion  goto 43
	expArit1  goto 21
	expArit2  goto 22
	termino  goto 23


state 15
	expArit2 : UI_F . '(' expArit1 ')'  (67)
	expArit2 : UI_F . '(' ')'  (68)
	expArit2 : UI_F . expArit1 ')'  (69)

	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	'('  shift 44
	'-'  shift 19
	.  error

	expArit1  goto 45
	expArit2  goto 22
	termino  goto 23


state 16
	termino : ID .  (72)

	.  reduce 72


state 17
	termino : CTE .  (71)

	.  reduce 71


state 18
	ejecutable : IF '(' . condicion ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (22)
	ejecutable : IF '(' . condicion ')' THEN bloqueSentencias ELSE ENDIF  (23)
	ejecutable : IF '(' . condicion THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (25)
	ejecutable : IF '(' . condicion ')' bloqueSentencias ELSE bloqueSentencias ENDIF  (27)
	ejecutable : IF '(' . error ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (29)
	ejecutable : IF '(' . condicion ')' THEN bloqueSentencias ENDIF  (30)
	ejecutable : IF '(' . condicion ')' THEN bloqueSentencias error  (31)
	ejecutable : IF '(' . condicion ')' bloqueSentencias ENDIF  (32)
	ejecutable : IF '(' . condicion THEN bloqueSentencias ENDIF  (33)
	ejecutable : IF '(' . condicion ')' THEN ENDIF  (37)

	error  shift 46
	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	'-'  shift 19
	.  error

	condicion  goto 47
	expArit1  goto 21
	expArit2  goto 22
	termino  goto 23


state 19
	termino : '-' . CTE  (73)

	CTE  shift 48
	.  error


state 20
	ejecutable : IF condicion . ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (24)
	ejecutable : IF condicion . THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (26)
	ejecutable : IF condicion . ')' THEN bloqueSentencias ENDIF  (34)
	ejecutable : IF condicion . THEN bloqueSentencias ENDIF  (35)

	THEN  shift 49
	')'  shift 50
	.  error


state 21
	condicion : expArit1 . DOBLEI expArit1  (52)
	condicion : expArit1 . MAYORI expArit1  (53)
	condicion : expArit1 . MENORI expArit1  (54)
	condicion : expArit1 . DISTINTO expArit1  (55)
	condicion : expArit1 . '>' expArit1  (56)
	condicion : expArit1 . '<' expArit1  (57)
	condicion : expArit1 .  (58)
	expArit1 : expArit1 . '+' expArit2  (62)
	expArit1 : expArit1 . '-' expArit2  (63)

	DOBLEI  shift 51
	MAYORI  shift 52
	MENORI  shift 53
	DISTINTO  shift 54
	'>'  shift 55
	'<'  shift 56
	'+'  shift 57
	'-'  shift 58
	THEN  reduce 58
	DO  reduce 58
	')'  reduce 58


state 22
	expArit1 : expArit2 .  (64)
	expArit2 : expArit2 . '*' termino  (65)
	expArit2 : expArit2 . '/' termino  (66)

	'*'  shift 59
	'/'  shift 60
	$end  reduce 64
	error  reduce 64
	IF  reduce 64
	THEN  reduce 64
	ELSE  reduce 64
	ENDIF  reduce 64
	END  reduce 64
	OUT  reduce 64
	WHILE  reduce 64
	DO  reduce 64
	LET  reduce 64
	ID  reduce 64
	DOBLEI  reduce 64
	MAYORI  reduce 64
	MENORI  reduce 64
	DISTINTO  reduce 64
	'.'  reduce 64
	')'  reduce 64
	'>'  reduce 64
	'<'  reduce 64
	'+'  reduce 64
	'-'  reduce 64


state 23
	expArit2 : termino .  (70)

	.  reduce 70


state 24
	ejecutable : OUT cadena . ')'  (46)
	ejecutable : OUT cadena .  (48)

	')'  shift 61
	$end  reduce 48
	error  reduce 48
	IF  reduce 48
	ELSE  reduce 48
	ENDIF  reduce 48
	END  reduce 48
	OUT  reduce 48
	WHILE  reduce 48
	LET  reduce 48
	ID  reduce 48


state 25
	ejecutable : OUT '(' . cadena ')'  (45)
	ejecutable : OUT '(' . cadena  (47)

	cadena  shift 62
	.  error


state 26
	ejecutable : WHILE '(' . condicion ')' DO bloqueSentencias  (38)
	ejecutable : WHILE '(' . condicion ')' error bloqueSentencias  (40)
	ejecutable : WHILE '(' . condicion DO bloqueSentencias  (42)
	ejecutable : WHILE '(' . ')' DO bloqueSentencias  (44)

	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	')'  shift 63
	'-'  shift 19
	.  error

	condicion  goto 64
	expArit1  goto 21
	expArit2  goto 22
	termino  goto 23


state 27
	ejecutable : WHILE condicion . ')' DO bloqueSentencias  (41)
	ejecutable : WHILE condicion . DO bloqueSentencias  (43)

	DO  shift 65
	')'  shift 66
	.  error


state 28
	ejecutable : LET error .  (50)

	.  reduce 50


state 29
	asignacion : ID . '=' expArit1 '.'  (59)
	asignacion : ID . '=' expArit1  (60)
	asignacion : ID . error expArit1 '.'  (61)

	error  shift 31
	'='  shift 32
	.  error


state 30
	ejecutable : LET asignacion .  (49)

	.  reduce 49


state 31
	asignacion : ID error . expArit1 '.'  (61)

	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	'-'  shift 19
	.  error

	expArit1  goto 67
	expArit2  goto 22
	termino  goto 23


state 32
	asignacion : ID '=' . expArit1 '.'  (59)
	asignacion : ID '=' . expArit1  (60)

	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	'-'  shift 19
	.  error

	expArit1  goto 68
	expArit2  goto 22
	termino  goto 23


state 33
	declarativa : error . ':' tipo '.'  (16)
	ejecutable : error . '(' condicion ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (28)
	ejecutable : error . '(' condicion ')' THEN bloqueSentencias ENDIF  (36)
	ejecutable : error . '(' condicion ')' DO bloqueSentencias  (39)

	':'  shift 13
	'('  shift 14
	.  error


state 34
	sentencia : sentencia declarativa .  (8)

	.  reduce 8


state 35
	sentencia : sentencia ejecutable .  (9)

	.  reduce 9


state 36
	tipo : UINT .  (20)

	.  reduce 20


state 37
	tipo : FLOAT .  (21)

	.  reduce 21


state 38
	listaVariables : listaVariables ID .  (19)

	.  reduce 19


state 39
	declarativa : listaVariables ':' . tipo '.'  (12)
	declarativa : listaVariables ':' . tipo error  (13)
	declarativa : listaVariables ':' . error '.'  (15)

	error  shift 69
	UINT  shift 36
	FLOAT  shift 37
	.  error

	tipo  goto 70


state 40
	listaVariables : listaVariables ',' . ID  (17)

	ID  shift 71
	.  error


state 41
	declarativa : listaVariables tipo . '.'  (14)

	'.'  shift 72
	.  error


state 42
	declarativa : error ':' tipo . '.'  (16)

	'.'  shift 73
	.  error


state 43
	ejecutable : error '(' condicion . ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (28)
	ejecutable : error '(' condicion . ')' THEN bloqueSentencias ENDIF  (36)
	ejecutable : error '(' condicion . ')' DO bloqueSentencias  (39)

	')'  shift 74
	.  error


state 44
	expArit2 : UI_F '(' . expArit1 ')'  (67)
	expArit2 : UI_F '(' . ')'  (68)

	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	')'  shift 75
	'-'  shift 19
	.  error

	expArit1  goto 76
	expArit2  goto 22
	termino  goto 23


state 45
	expArit1 : expArit1 . '+' expArit2  (62)
	expArit1 : expArit1 . '-' expArit2  (63)
	expArit2 : UI_F expArit1 . ')'  (69)

	')'  shift 77
	'+'  shift 57
	'-'  shift 58
	.  error


state 46
	ejecutable : IF '(' error . ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (29)

	')'  shift 78
	.  error


state 47
	ejecutable : IF '(' condicion . ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (22)
	ejecutable : IF '(' condicion . ')' THEN bloqueSentencias ELSE ENDIF  (23)
	ejecutable : IF '(' condicion . THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (25)
	ejecutable : IF '(' condicion . ')' bloqueSentencias ELSE bloqueSentencias ENDIF  (27)
	ejecutable : IF '(' condicion . ')' THEN bloqueSentencias ENDIF  (30)
	ejecutable : IF '(' condicion . ')' THEN bloqueSentencias error  (31)
	ejecutable : IF '(' condicion . ')' bloqueSentencias ENDIF  (32)
	ejecutable : IF '(' condicion . THEN bloqueSentencias ENDIF  (33)
	ejecutable : IF '(' condicion . ')' THEN ENDIF  (37)

	THEN  shift 79
	')'  shift 80
	.  error


state 48
	termino : '-' CTE .  (73)

	.  reduce 73


state 49
	ejecutable : IF condicion THEN . bloqueSentencias ELSE bloqueSentencias ENDIF  (26)
	ejecutable : IF condicion THEN . bloqueSentencias ENDIF  (35)

	error  shift 81
	IF  shift 2
	BEGIN  shift 82
	OUT  shift 3
	WHILE  shift 4
	LET  shift 5
	ID  shift 6
	.  error

	bloqueSentencias  goto 83
	declarativa  goto 84
	ejecutable  goto 85
	listaVariables  goto 11
	asignacion  goto 12


state 50
	ejecutable : IF condicion ')' . THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (24)
	ejecutable : IF condicion ')' . THEN bloqueSentencias ENDIF  (34)

	THEN  shift 86
	.  error


state 51
	condicion : expArit1 DOBLEI . expArit1  (52)

	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	'-'  shift 19
	.  error

	expArit1  goto 87
	expArit2  goto 22
	termino  goto 23


state 52
	condicion : expArit1 MAYORI . expArit1  (53)

	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	'-'  shift 19
	.  error

	expArit1  goto 88
	expArit2  goto 22
	termino  goto 23


state 53
	condicion : expArit1 MENORI . expArit1  (54)

	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	'-'  shift 19
	.  error

	expArit1  goto 89
	expArit2  goto 22
	termino  goto 23


state 54
	condicion : expArit1 DISTINTO . expArit1  (55)

	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	'-'  shift 19
	.  error

	expArit1  goto 90
	expArit2  goto 22
	termino  goto 23


state 55
	condicion : expArit1 '>' . expArit1  (56)

	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	'-'  shift 19
	.  error

	expArit1  goto 91
	expArit2  goto 22
	termino  goto 23


state 56
	condicion : expArit1 '<' . expArit1  (57)

	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	'-'  shift 19
	.  error

	expArit1  goto 92
	expArit2  goto 22
	termino  goto 23


state 57
	expArit1 : expArit1 '+' . expArit2  (62)

	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	'-'  shift 19
	.  error

	expArit2  goto 93
	termino  goto 23


state 58
	expArit1 : expArit1 '-' . expArit2  (63)

	UI_F  shift 15
	ID  shift 16
	CTE  shift 17
	'-'  shift 19
	.  error

	expArit2  goto 94
	termino  goto 23


state 59
	expArit2 : expArit2 '*' . termino  (65)

	ID  shift 16
	CTE  shift 17
	'-'  shift 19
	.  error

	termino  goto 95


state 60
	expArit2 : expArit2 '/' . termino  (66)

	ID  shift 16
	CTE  shift 17
	'-'  shift 19
	.  error

	termino  goto 96


state 61
	ejecutable : OUT cadena ')' .  (46)

	.  reduce 46


state 62
	ejecutable : OUT '(' cadena . ')'  (45)
	ejecutable : OUT '(' cadena .  (47)

	')'  shift 97
	$end  reduce 47
	error  reduce 47
	IF  reduce 47
	ELSE  reduce 47
	ENDIF  reduce 47
	END  reduce 47
	OUT  reduce 47
	WHILE  reduce 47
	LET  reduce 47
	ID  reduce 47


state 63
	ejecutable : WHILE '(' ')' . DO bloqueSentencias  (44)

	DO  shift 98
	.  error


state 64
	ejecutable : WHILE '(' condicion . ')' DO bloqueSentencias  (38)
	ejecutable : WHILE '(' condicion . ')' error bloqueSentencias  (40)
	ejecutable : WHILE '(' condicion . DO bloqueSentencias  (42)

	DO  shift 99
	')'  shift 100
	.  error


state 65
	ejecutable : WHILE condicion DO . bloqueSentencias  (43)

	error  shift 81
	IF  shift 2
	BEGIN  shift 82
	OUT  shift 3
	WHILE  shift 4
	LET  shift 5
	ID  shift 6
	.  error

	bloqueSentencias  goto 101
	declarativa  goto 84
	ejecutable  goto 85
	listaVariables  goto 11
	asignacion  goto 12


state 66
	ejecutable : WHILE condicion ')' . DO bloqueSentencias  (41)

	DO  shift 102
	.  error


state 67
	asignacion : ID error expArit1 . '.'  (61)
	expArit1 : expArit1 . '+' expArit2  (62)
	expArit1 : expArit1 . '-' expArit2  (63)

	'.'  shift 103
	'+'  shift 57
	'-'  shift 58
	.  error


state 68
	asignacion : ID '=' expArit1 . '.'  (59)
	asignacion : ID '=' expArit1 .  (60)
	expArit1 : expArit1 . '+' expArit2  (62)
	expArit1 : expArit1 . '-' expArit2  (63)

	'.'  shift 104
	'+'  shift 57
	'-'  shift 58
	$end  reduce 60
	error  reduce 60
	IF  reduce 60
	ELSE  reduce 60
	ENDIF  reduce 60
	END  reduce 60
	OUT  reduce 60
	WHILE  reduce 60
	LET  reduce 60
	ID  reduce 60


state 69
	declarativa : listaVariables ':' error . '.'  (15)

	'.'  shift 105
	.  error


state 70
	declarativa : listaVariables ':' tipo . '.'  (12)
	declarativa : listaVariables ':' tipo . error  (13)

	error  shift 106
	'.'  shift 107
	.  error


state 71
	listaVariables : listaVariables ',' ID .  (17)

	.  reduce 17


state 72
	declarativa : listaVariables tipo '.' .  (14)

	.  reduce 14


state 73
	declarativa : error ':' tipo '.' .  (16)

	.  reduce 16


state 74
	ejecutable : error '(' condicion ')' . THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (28)
	ejecutable : error '(' condicion ')' . THEN bloqueSentencias ENDIF  (36)
	ejecutable : error '(' condicion ')' . DO bloqueSentencias  (39)

	THEN  shift 108
	DO  shift 109
	.  error


state 75
	expArit2 : UI_F '(' ')' .  (68)

	.  reduce 68


state 76
	expArit1 : expArit1 . '+' expArit2  (62)
	expArit1 : expArit1 . '-' expArit2  (63)
	expArit2 : UI_F '(' expArit1 . ')'  (67)

	')'  shift 110
	'+'  shift 57
	'-'  shift 58
	.  error


state 77
	expArit2 : UI_F expArit1 ')' .  (69)

	.  reduce 69


state 78
	ejecutable : IF '(' error ')' . THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (29)

	THEN  shift 111
	.  error


state 79
	ejecutable : IF '(' condicion THEN . bloqueSentencias ELSE bloqueSentencias ENDIF  (25)
	ejecutable : IF '(' condicion THEN . bloqueSentencias ENDIF  (33)

	error  shift 81
	IF  shift 2
	BEGIN  shift 82
	OUT  shift 3
	WHILE  shift 4
	LET  shift 5
	ID  shift 6
	.  error

	bloqueSentencias  goto 112
	declarativa  goto 84
	ejecutable  goto 85
	listaVariables  goto 11
	asignacion  goto 12


state 80
	ejecutable : IF '(' condicion ')' . THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (22)
	ejecutable : IF '(' condicion ')' . THEN bloqueSentencias ELSE ENDIF  (23)
	ejecutable : IF '(' condicion ')' . bloqueSentencias ELSE bloqueSentencias ENDIF  (27)
	ejecutable : IF '(' condicion ')' . THEN bloqueSentencias ENDIF  (30)
	ejecutable : IF '(' condicion ')' . THEN bloqueSentencias error  (31)
	ejecutable : IF '(' condicion ')' . bloqueSentencias ENDIF  (32)
	ejecutable : IF '(' condicion ')' . THEN ENDIF  (37)

	error  shift 81
	IF  shift 2
	THEN  shift 113
	BEGIN  shift 82
	OUT  shift 3
	WHILE  shift 4
	LET  shift 5
	ID  shift 6
	.  error

	bloqueSentencias  goto 114
	declarativa  goto 84
	ejecutable  goto 85
	listaVariables  goto 11
	asignacion  goto 12


state 81
	bloqueSentencias : error . sentencia END  (4)
	declarativa : error . ':' tipo '.'  (16)
	ejecutable : error . '(' condicion ')' THEN bloqueSentencias ELSE bloqueSentencias ENDIF  (28)
	ejecutable : error . '(' condicion ')' THEN bloqueSentencias ENDIF  (36)
	ejecutable : error . '(' condicion ')' DO bloqueSentencias  (39)

	error  shift 33
	IF  shift 2
	OUT  shift 3
	WHILE  shift 4
	LET  shift 5
	ID  shift 6
	':'  shift 13
	'('  shift 14
	.  error

	sentencia  goto 115
	declarativa  goto 9
	ejecutable  goto 10
	listaVariables  goto 11
	asignacion  goto 12


state 82
	bloqueSentencias : BEGIN . sentencia END  (3)
	bloqueSentencias : BEGIN . sentencia error  (5)

	error  shift 33
	IF  shift 2
	OUT  shift 3
	WHILE  shift 4
	LET  shift 5
	ID  shift 6
	.  error

	sentencia  goto 116
	declarativa  goto 9
	ejecutable  goto 10
	listaVariables  goto 11
	asignacion  goto 12


state 83
	ejecutable : IF condicion THEN bloqueSentencias . ELSE bloqueSentencias ENDIF  (26)
	ejecutable : IF condicion THEN bloqueSentencias . ENDIF  (35)

	ELSE  shift 117
	ENDIF  shift 118
	.  error


state 84
	bloqueSentencias : declarativa .  (6)

	.  reduce 6


state 85
	bloqueSentencias : ejecutable .  (7)

	.  reduce 7


state 86
	ejecutable : IF condicion ')' THEN . bloqueSentencias ELSE bloqueSentencias ENDIF  (24)
	ejecutable : IF condicion ')' THEN . bloqueSentencias ENDIF  (34)

	error  shift 81
	IF  shift 2
	BEGIN  shift 82
	OUT  shift 3
	WHILE  shift 4
	LET  shift 5
	ID  shift 6
	.  error

	bloqueSentencias  goto 119
	declarativa  goto 84
	ejecutable  goto 85
	listaVariables  goto 11
	asignacion  goto 12


state 87
	condicion : expArit1 DOBLEI expArit1 .  (52)
	expArit1 : expArit1 . '+' expArit2  (62)
	expArit1 : expArit1 . '-' expArit2  (63)

	'+'  shift 57
	'-'  shift 58
	THEN  reduce 52
	DO  reduce 52
	')'  reduce 52


state 88
	condicion : expArit1 MAYORI expArit1 .  (53)
	expArit1 : expArit1 . '+' expArit2  (62)
	expArit1 : expArit1 . '-' expArit2  (63)

	'+'  shift 57
	'-'  shift 58
	THEN  reduce 53
	DO  reduce 53
	')'  reduce 53


state 89
	condicion : expArit1 MENORI expArit1 .  (54)
	expArit1 : expArit1 . '+' expArit2  (62)
	expArit1 : expArit1 . '-' expArit2  (63)

	'+'  shift 57
	'-'  shift 58
	THEN  reduce 54
	DO  reduce 54
	')'  reduce 54


state 90
	condicion : expArit1 DISTINTO expArit1 .  (55)
	expArit1 : expArit1 . '+' expArit2  (62)
	expArit1 : expArit1 . '-' expArit2  (63)

	'+'  shift 57
	'-'  shift 58
	THEN  reduce 55
	DO  reduce 55
	')'  reduce 55


state 91
	condicion : expArit1 '>' expArit1 .  (56)
	expArit1 : expArit1 . '+' expArit2  (62)
	expArit1 : expArit1 . '-' expArit2  (63)

	'+'  shift 57
	'-'  shift 58
	THEN  reduce 56
	DO  reduce 56
	')'  reduce 56


state 92
	condicion : expArit1 '<' expArit1 .  (57)
	expArit1 : expArit1 . '+' expArit2  (62)
	expArit1 : expArit1 . '-' expArit2  (63)

	'+'  shift 57
	'-'  shift 58
	THEN  reduce 57
	DO  reduce 57
	')'  reduce 57


state 93
	expArit1 : expArit1 '+' expArit2 .  (62)
	expArit2 : expArit2 . '*' termino  (65)
	expArit2 : expArit2 . '/' termino  (66)

	'*'  shift 59
	'/'  shift 60
	$end  reduce 62
	error  reduce 62
	IF  reduce 62
	THEN  reduce 62
	ELSE  reduce 62
	ENDIF  reduce 62
	END  reduce 62
	OUT  reduce 62
	WHILE  reduce 62
	DO  reduce 62
	LET  reduce 62
	ID  reduce 62
	DOBLEI  reduce 62
	MAYORI  reduce 62
	MENORI  reduce 62
	DISTINTO  reduce 62
	'.'  reduce 62
	')'  reduce 62
	'>'  reduce 62
	'<'  reduce 62
	'+'  reduce 62
	'-'  reduce 62


state 94
	expArit1 : expArit1 '-' expArit2 .  (63)
	expArit2 : expArit2 . '*' termino  (65)
	expArit2 : expArit2 . '/' termino  (66)

	'*'  shift 59
	'/'  shift 60
	$end  reduce 63
	error  reduce 63
	IF  reduce 63
	THEN  reduce 63
	ELSE  reduce 63
	ENDIF  reduce 63
	END  reduce 63
	OUT  reduce 63
	WHILE  reduce 63
	DO  reduce 63
	LET  reduce 63
	ID  reduce 63
	DOBLEI  reduce 63
	MAYORI  reduce 63
	MENORI  reduce 63
	DISTINTO  reduce 63
	'.'  reduce 63
	')'  reduce 63
	'>'  reduce 63
	'<'  reduce 63
	'+'  reduce 63
	'-'  reduce 63


state 95
	expArit2 : expArit2 '*' termino .  (65)

	.  reduce 65


state 96
	expArit2 : expArit2 '/' termino .  (66)

	.  reduce 66


state 97
	ejecutable : OUT '(' cadena ')' .  (45)

	.  reduce 45


state 98
	ejecutable : WHILE '(' ')' DO . bloqueSentencias  (44)

	error  shift 81
	IF  shift 2
	BEGIN  shift 82
	OUT  shift 3
	WHILE  shift 4
	LET  shift 5
	ID  shift 6
	.  error

	bloqueSentencias  goto 120
	declarativa  goto 84
	ejecutable  goto 85
	listaVariables  goto 11
	asignacion  goto 12


state 99
	ejecutable : WHILE '(' condicion DO . bloqueSentencias  (42)

	error  shift 81
	IF  shift 2
	BEGIN  shift 82
	OUT  shift 3
	WHILE  shift 4
	LET  shift 5
	ID  shift 6
	.  error

	bloqueSentencias  goto 121
	declarativa  goto 84
	ejecutable  goto 85
	listaVariables  goto 11
	asignacion  goto 12


state 100
	ejecutable : WHILE '(' condicion ')' . DO bloqueSentencias  (38)
	ejecutable : WHILE '(' condicion ')' . error bloqueSentencias  (40)

	error  shift 122
	DO  shift 123
	.  error


state 101
	ejecutable : WHILE condicion DO bloqueSentencias .  (43)

	.  reduce 43


state 102
	ejecutable : WHILE condicion ')' DO . bloqueSentencias  (41)

	error  shift 81
	IF  shift 2
	BEGIN  shift 82
	OUT  shift 3
	WHILE  shift 4
	LET  shift 5
	ID  shift 6
	.  error

	bloqueSentencias  goto 124
	declarativa  goto 84
	ejecutable  goto 85
	listaVariables  goto 11
	asignacion  goto 12


state 103
	asignacion : ID error expArit1 '.' .  (61)

	.  reduce 61


state 104
	asignacion : ID '=' expArit1 '.' .  (59)

